--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "3.4.3",
     "reactstrap": "^8.7.1",
     "rebass": "^4.0.7",
+    "rss-parser": "^3.10.0",
     "save-dev": "0.0.1-security"
   },
   "scripts": {
